# FSDict

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  Mainpage.dox  README  README.md  index.html  make_it_easy.sh  params.json  uml.xmi
ErrDic/: ErrDic.h  ErrDic.tcc  compileED.cxx  lookupED.cxx
FSDict/: CMakeLists.txt  Global.h  locale_test.cxx
FSDict/CSLLocale/: CSLLocale.cxx  CSLLocale.h
FSDict/DictSearch/: DictSearch.cxx
FSDict/FBDic/: FBDic.tcc
FSDict/INIConfig/: CMakeLists.txt  INIConfig.h
FSDict/JNICandExtractor/: CandExtractor.h  CandidateExtractor.cxx
FSDict/LevNDEA/: LevNDEA.cxx
FSDict/MinDic/: StateHash.h
FSDict/MinDic2/: MinDic2.h  MinDic2.tcc
FSDict/MinDicString/: MinDicString.tcc
FSDict/Pattern/: ComputeInstruction.h  Instruction.h  PatternGraph.h  PatternSet.h  PatternWeights.h
FSDict/SearchText/: README  SearchText.h
FSDict/Trie/: compileTrie.cxx  extractTrie.cxx  trieToDot.cxx
FSDict/Vaam/: Vaam.h
FSDict/Val/: Val.tcc
FSDict/codecvt/: test.cxx
FSDict/tools/: get_queries.pl  invent_data.pl
JAVA/csl/: build.xml
JNI/: CMakeLists.txt  JNIUtils.h  csl_DictSearch_DictSearch.cxx  csl_DictSearch_DictSearch.h
JNICandExtractor/: CandidateReceiver.java
PERLLIB/CSL/: MinDic.pm  MinDicString.pm  Pattern.pm  Vaam.pm
Test/: Test.h
cmake_modules/: FindCPPUNIT.cmake
csl/: CMakeLists.txt
csl/DictSearch/: AnnotatedDictModule.h  DictSearch.h
csl/Getopt/: Getopt.h
csl/INIConfig/: INIConfig.cxx  INIParser.cxx  INIParser.h
csl/JAVA/: csl_candidateExtractor_CandidateExtractor.h
csl/JNICandExtractor/: CandidateExtractor.java
csl/LevDEA/: LevDEA.cxx  LevDEA.h
csl/LevNDEA/: LevNDEA.h  test.cxx
csl/Locale/: Ctype_OldGerman.h
csl/MSMatch/: MSMatch.tcc
csl/MinDic/: MinDic.h  MinDic.tcc
csl/MinDic2/: CMakeLists.txt
csl/MinDicFlexible/: MinDicFlexible.h
csl/MinDicString/: MinDicString.h  extractMDS.cxx
csl/Pattern/: CMakeLists.txt  Instruction.cxx  Pattern.h  PatternWeights.cxx  PosPattern.h
csl/SearchText/: searchText.cxx  test.matches.txt
csl/SimpleFSA/: CMakeLists.txt  Simple2TransTable.h  SimpleFSA.h  testSimpleFSA.cxx
csl/SimpleFSA/CompoundDic/: CMakeLists.txt  CompoundDic.h  SetOfStates.h  TrivialDecomp.h  exec_compileCompoundDic.cxx  exec_lookupCompoundDic.cxx  exec_lookupSimpleCompoundDic.cxx  exec_produceCompounds.cxx  exec_trivialDecomp.cxx
csl/SimpleFSA/CompoundDic/Test/: CMakeLists.txt  TestCompoundDic.h  exec_testCompoundDic.cxx
csl/Trie/: Trie.cxx  Trie.h  Trie.tcc  test.cxx
csl/Vaam/: Vaam.tcc
fsdict/: CMakeLists.txt  Global.h  Stopwatch.h  locale_test.cxx
fsdict/Alphabet/: Alphabet.cxx  Alphabet.h  check_sort.cxx  test.cxx
fsdict/CSLLocale/: CSLLocale.cxx  CSLLocale.h
fsdict/CSLLocale/Test/: TestCSLLocale.h  exec_testCSLLocale.cxx
fsdict/DictSearch/: AnnotatedDictModule.h  CMakeLists.txt  DictSearch.cxx  DictSearch.h  documentation.h
fsdict/DictSearch/Test/: TestDictSearch.h  exec_testDictSearch.cxx
fsdict/FBDic/: FBDic.h  FBDic.tcc  documentation.h
fsdict/FBDic/Test/: CMakeLists.txt  TestFBDic.h  testFBDic.cxx
fsdict/FBDicString/: FBDicString.h  FBDicString.tcc
fsdict/FBDicString/Test/: TestFBDicString.h  testFBDicString.cxx
fsdict/Getopt/: Getopt.h  test.cxx
fsdict/Getopt/Test/: TestGetopt.h  testGetopt.cxx
fsdict/Hash/: Hash.h  test.cxx
fsdict/Hash/Test/: TestHash.h
fsdict/INIConfig/: INIConfig.cxx  INIConfig.h  INIParser.cxx  INIParser.h  dictionary.c  dictionary.h
fsdict/INIConfig/Test/: TestINIConfig.h  exec_testINIConfig.cxx
fsdict/JAVA/csl/candidateExtractor/: CandidateExtractor.cxx  CandidateExtractor.h
fsdict/JNICandExtractor/: CandidateExtractor.cxx
fsdict/LevDEA/: AutData.cxx  AutData.h  CMakeLists.txt  LevDEA.cxx  LevDEA.h  LevDEA_cslversion.h  LevDEA_cslversion.tcc
fsdict/LevDEA/Test/: CMakeLists.txt  TestLevDEA.h  exec_testLevDEA.cxx
fsdict/LevDistance/: LevDistance.h
fsdict/LevDistance/Test/: TestLevDistance.h  exec_testLevDistance.cxx
fsdict/LevFilter/: LevFilter.h
fsdict/LevNDEA/: LevNDEA.cxx  LevNDEA.h  SuggestIter.h  test.cxx
fsdict/Locale/: Ctype_OldGerman.h
fsdict/Locale/Test/: TestCtype_OldGerman.h  exec_testCtype_OldGerman.cxx
fsdict/MSMatch/: MSMatch.h  MSMatch.tcc
fsdict/MinDic/: MinDic.h  MinDic.tcc  StateHash.h  documentation.h
fsdict/MinDic/Test/: TestMinDic.h  testMinDic.cxx
fsdict/MinDic2/: MinDic2.h  MinDic2.tcc
fsdict/MinDic2/Test/: CMakeLists.txt  TestMinDic.h
fsdict/MinDicString/: MinDicString.h  MinDicString.tcc  extractMDS.cxx
fsdict/Pattern/: ComputeInstruction.cxx  ComputeInstruction.h  Instruction.cxx  Instruction.h  Interpretation.cxx  Interpretation.h  Pattern.cxx  Pattern.h  PatternGraph.h  PatternProbabilities.h  PatternSet.h  PatternWeights.cxx  PatternWeights.h  PosPattern.h  Trace.h
fsdict/Pattern/Test/: CMakeLists.txt  TestComputeInstruction.h  TestPattern.h  TestPatternWeights.h  exec_patterns2dot.cxx  exec_testComputeInstruction.cxx  testPattern.cxx
fsdict/ResultSet/: ResultSet.h  test.cxx
fsdict/SearchText/: SearchText.h  searchText.cxx  test.txt
fsdict/TransTable/: Cell.h  Cell_perfHash.h  Cell_standard.h  TempState.h  TransTable.cxx  TransTable.h  TransTable.tcc  TransTable_perfHash.h  TransTable_perfHash.tcc  TransTable_standard.h  TransTable_standard.tcc  printCells.cxx  stats.cxx  test.cxx
fsdict/Trie/: CMakeLists.txt  Trie.cxx  Trie.h  Trie.tcc  compileTrie.cxx  extractTrie.cxx  test.cxx  trieToDot.cxx
fsdict/UTF8Locale/: UTF8Locale.cxx  UTF8Locale.h
fsdict/UTF8Locale/Test/: CMakeLists.txt  TestUTF8Locale.h  exec_testUTF8Locale.cxx
fsdict/Vaam/: Vaam.h  Vaam.tcc  documentation.h  example.cxx  testPatternGraph.cxx
fsdict/Vaam/Test/: TestVaam.h  exec_testVaam.cxx
fsdict/Val/: Val.h  Val.tcc
fsdict/Val/Test/: TestVal.h  testVal.cxx
fsdict/codecvt/: UTF8_Codecvt.h  test.cxx
fsdict/getCandscore/: getCandscore.cxx
fsdict/iDictionary/: iDictionary.h
fsdict/tools/: Freqhash.pm  get_alph.pl  multi2single.pl  reverseDic.pl
tools/: CMakeLists.txt  generate_levDEA.py
tools/vaamFilter/: CMakeLists.txt  vaamEvaluation.cxx  vaamFilter.cxx  vamFilter.cxx
(+1513 files in other folders)
